# Game-Concept

./: README.md
FloorCamera/: Description.md  main.cpp
GAME_SYSTEMS/: Description.md
GAME_SYSTEMS/trading_test_1/: Concept.md  exec  trade_log.json  trading.cpp
OpenGL_Experiment/: CMakeLists.txt  Camera.h  Description.md  main.cpp
Triangles/: CMakeLists.txt  main.cpp  triangles.vert
genEnv/: Description.md  fragment_shader.glsl  main.cpp  vertex_shader.glsl
lowLevelC/: build_and_run.sh  cortexM3.c  cortexM3.elf  cortexM3.ld  description.md  startup.c
metalTest/: CMakeLists.txt  main.mm  movement.h
physicsTest/: CMakeLists.txt  Description.md  main.cpp
textureCube/: CMakeLists.txt  camera.h  cube_gen.h  desc.md  main.cpp  text_renderer.cpp  text_renderer.h
